# SIMURA-OS

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
ai-assistant/: README.md  pyproject.toml
ai-assistant/packaging/: PKGBUILD
ai-assistant/resources/: simura-assistant.desktop
ai-assistant/src/simura/: __init__.py  __main__.py  config.py  controller.py  history.py  ollama.py  tools.py
ai-assistant/src/simura/ui/: __init__.py  main_window.py  quick_launch.py  style.py  workers.py
ai-assistant/tests/: test_smoke.py
archiso/: packages.x86_64  pacman.conf  profiledef.sh
archiso/airootfs/etc/: hostname  hosts  issue  lsb-release  motd  os-release  pacman.conf  sddm.conf
archiso/airootfs/root/: .zshrc
archiso/efiboot/loader/: loader.conf
archiso/grub/: grub.cfg  loopback.cfg
archiso/syslinux/: archiso_head.cfg  archiso_pxe-linux.cfg  archiso_pxe.cfg  archiso_sys-linux.cfg  archiso_sys.cfg  archiso_tail.cfg  syslinux.cfg
branding/: PALETTE.md
branding/grub/: theme.txt
branding/plymouth/: README.md  simura.plymouth  simura.script
branding/sddm/theme/: Main.qml  metadata.desktop  theme.conf
docs/: ARCHITECTURE.md  PRIVACY.md  WELCOME.md
installer/calamares/: settings.conf
installer/calamares/modules/: displaymanager.conf  packages.conf  shellprocess.conf  unpackfs.conf
scripts/: build.sh  render-branding.sh
themes/gtk/gtk-3.0/: settings.ini
themes/konsole/: SIMURA.colorscheme  SIMURA.profile
themes/plasma/: SIMURA.colors  kdeglobals  kwinrc
(+34 files in other folders)
