[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simura-assistant"
version = "0.1.0"
description = "SIMURA OS — local AI assistant powered by Ollama"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "SIMURA OS contributors" }]
dependencies = [
    "PyQt6>=6.5",
    "requests>=2.31",
    "rich>=13",
    "pyyaml>=6",
    "psutil>=5.9",
    "watchdog>=3",
]

[project.scripts]
simura-assistant = "simura.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
